hphp/test/slow/typed_locals/enforce_vec.php.expectf
vec(1) {
  string(1) "a"
}
vec(2) {
  string(1) "a"
  int(1)
}

Fatal error: Uncaught exception 'TypeAssertionException' with message 'Expected HH\vec<_>, got HH\dict' in %s/hphp/test/slow/typed_locals/enforce_vec.php:11
Stack trace:
#0 {main}
